# noteutil

./: Cargo.toml  README.md
autoload/: noteutil.vim
ftplugin/: markdown.vim
plugin/: noteutil.vim
src/: config.rs  context.rs  date.rs  html.rs  http.rs  journal.rs  lib.rs  lsp.rs  main.rs  note.rs
src/cli/: journal.rs  list.rs  mod.rs  new.rs  note.rs  template.rs
src/cmd/: journal.rs  mod.rs  note.rs  server.rs  template.rs
src/core/: journal.rs  mod.rs  note.rs
